--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@
 /.web-server-pid
 ###< symfony/web-server-bundle ###
 /.idea/
+
+###> liip/imagine-bundle ###
+/public/media/cache/
+###< liip/imagine-bundle ###
