--- a/config/packages/liip_imagine.yaml
+++ b/config/packages/liip_imagine.yaml
@@ -43,3 +43,29 @@ liip_imagine:
 
                     # set the position of the watermark
                 #    position: bottomright
+        squared_50_50:
+
+                    # set your image quality defaults
+                    jpeg_quality:          85
+                    png_compression_level: 8
+
+                    # setup the filter steps to apply for this transformation
+                    filters:
+
+                        # auto rotate the image using EXIF metadata
+                        auto_rotate: ~
+
+                        # strip the image of all metadata
+                        strip: ~
+
+                        # scale and square the image to the given dimensions
+                        thumbnail:
+                            size:          [50, 50]
+                            mode:          inset
+                            allow_upscale: true
+
+                        # create border by placing image on larger black background
+                        background:
+                            size:     [50, 50]
+                            position: center
+                            color:    '#fff'
