--- a/config/packages/liip_imagine.yaml
+++ b/config/packages/liip_imagine.yaml
@@ -123,3 +123,30 @@ liip_imagine:
                     size:     [400, 400]
                     position: center
                     color:    '#fff'
+
+        squared_30_30_social:
+
+            # set your image quality defaults
+            jpeg_quality:          85
+            png_compression_level: 8
+
+            # setup the filter steps to apply for this transformation
+            filters:
+
+                # auto rotate the image using EXIF metadata
+                auto_rotate: ~
+
+                # strip the image of all metadata
+                strip: ~
+
+                # scale and square the image to the given dimensions
+                thumbnail:
+                    size:          [30, 30]
+                    mode:          inset
+                    allow_upscale: true
+
+                # create border by placing image on larger black background
+                background:
+                    size:     [30, 30]
+                    position: center
+                    color:    '#00060C'
